frontend/app/assets/stylesheets/archivesspace/common.less
.form-horizontal {
  // Increase spacing between groups
  .control-group {
    margin-bottom: 8px;
  }
}

h2 > .label {
  line-height: @baseLineHeight * 2;
  vertical-align: top;
}

.breadcrumb {
  margin-top: -@baseLineHeight;
  .box-shadow(~"inset 0 -1px 0 rgba(0,0,0,.05), 0 1px 10px rgba(0,0,0,.05)");
}

.navbar .brand {
  text-shadow: 0 1px 0 rgba(255, 255, 255, .1), 0 0 30px rgba(255, 255, 255, .125);
  color: black;
  font-weight: bold;
}

.navbar .brand:hover {
  text-shadow: 0 1px 0 rgba(255, 255, 255, 0.5), 0 0 30px rgba(255, 255, 255, 0.125);
}

.modal > form {
  margin-bottom: 0;
}

.modal .modal-footer {
  text-align: left;
}

.modal .modal-footer .btn-cancel {
  float: right;
}

.btn-toolbar >.btn-group + .btn-group {
  margin-left: -5px;
}

.btn-toolbar > .btn-group > .btn, 
.btn-toolbar > .btn-group > .dropdown-toggle
{
  -webkit-border-radius: 0px;
  border-radius: 0px;
  -moz-border-radius: 0px;
}

.btn-toolbar > .btn-group:first-child > .btn, 
.btn-toolbar > .btn-group:first-child > .dropdown-toggle{
  -webkit-border-bottom-left-radius: 4px;
  border-bottom-left-radius: 4px;
  -webkit-border-top-left-radius: 4px;
  border-top-left-radius: 4px;
  -moz-border-radius-bottomleft: 4px;
  -moz-border-radius-topleft: 4px;    
}

.btn-toolbar > .btn-group:last-child > .btn:last-child, 
.btn-toolbar > .btn-group:last-child > .dropdown-toggle:nth-last-child(2){
  -webkit-border-bottom-right-radius: 4px;
  border-bottom-right-radius: 4px;
  -webkit-border-top-right-radius: 4px;
  border-top-right-radius: 4px;
  -moz-border-radius-bottomright: 4px;
  -moz-border-radius-topright: 4px;    
}

.btn.btn-mini {
  [class^="icon-"], [class*=" icon-"] {
    margin-top: -1px;
  }
}

#object_container {
  position: relative;
}

.label-and-value .span3 {
}

.identifier-display {
  .identifier-display-part {
    border: 1px solid #F6F6F6;
    background-color: #FCFCFC;
    padding: 2px 4px;
    margin-right: 4px;
    min-width: 60px;
    float: left;
    height: 1.2em;
  }
}

.tab-content {
  overflow: visible;
}

.input-append .dropdown-menu, 
.input-prepend .dropdown-menu {
  font-size: @baseFontSize;
}

.record-pane > .btn-group {
  float: right;
  margin-top: 10px;
}

.dropdown-submenu a:focus .dropdown-menu {
  display: block;
}

.nav-list .form-actions {
  margin: 0;
  padding: 10px !important;
  border: 1px solid #E5E5E5;
  border-radius: 0 0 4px 4px;

  .btn-primary {
    width: 100%;
  }

  .btn-cancel {
    width: auto;
    float: right;
    padding: 4px 14px;
  }
}

/* accordion styles */
.accordion {
  &.details {
    .accordion-body {
      background-color: #fafafa;      
      &.in {
        padding-top: 8px;
        border-top: 1px solid #E5E5E5;
      }
    }
  }
  .accordion-body.collapse {
    border-top: none;
  }
  .accordion-toggle {
    .icon-chevron-down {
      display: block;
    }
    .icon-chevron-right {
      display: none;
    }
    &.row-fluid {
      padding-bottom: 0;
    }
    &.collapsed {
      .icon-chevron-down {
        display: none;
      }
      .icon-chevron-right {
        display: block;
      }
    }
  }
}

.action-show {
  section section {
    margin: 0 20px;
  }
}

